--- a/Team's photo.html
+++ b/Team's photo.html
@@ -9,8 +9,7 @@
         <link rel="stylesheet" href="fontello-d80c9d98/css/fontello.css">
     <style>
         body{
-        background-image: url(../Test1/images/bg.jpg);
-        background-size: cover;
+        background-color: rgb(96, 129, 118);
         font-family: 'Dancing Script', cursive;
         }
 
@@ -184,22 +183,20 @@
                         <!-- Thumbnails -->
                             <section class="thumbnails">
                                 <div>                                   
-                                        <img src="../Web2/image3/1.jpg" alt="" />
+                                        <img src="img/T1.jpg" alt="" />
                                         <h3>Hơm "gặm" xương Mười</h3>                                    
                                     
-                                        <img src="../Web2/image3/2.jpg" alt="" />
+                                        <img src="img/T2.jpg" alt="" />
                                         <h3>Bữa 20 tháng mừi, được tặng nhiều đồ á</h3>
                                     
                                 </div>
                                 <div>               
-                                        <img src="../Web2/image3/3.jpg" alt="" />
-                                        <h3>Bữa này hơm sinh nhựt chị Tươi.</h3>                                 
-                                </div>                            
+                                        <img src="img/T3.jpg" alt="" />
+                                        <h3>Bữa này hơm sinh nhựt chị Tươi.</h3>    
+                                        <img src="img/T4.jpg" alt="" />
 
-                                <div>               
-                                    <img src="../Web2/image3/4.jpg" alt="" />
-                                    <h3>Thấy mọi ngừi bảo nà đi tập thể dục ^^</h3>                                 
-                            </div>  
+                                        <h3>Thấy mọi ngừi bảo nà đi tập thể dục ^^</h3>                             
+                                </div>                            
                             </section>
  
                     </section>
