--- a/Team's photo.html
+++ b/Team's photo.html
@@ -128,12 +128,6 @@
             font-size:0.9rem;
         }
 
-        #footer a{
-            color:rgba(255,255,255,0.5);
-            text-decoration: none;
-            border-bottom: 1px dotted rgba(255,255,255,0.5);
-        }
-
         #footer:before{
             content:'';
             display: block;
@@ -183,17 +177,17 @@
                         <!-- Thumbnails -->
                             <section class="thumbnails">
                                 <div>                                   
-                                        <img src="img/T1.jpg" alt="" />
+                                        <img src="./img/T1.jpg" alt="" />
                                         <h3>Hơm "gặm" xương Mười</h3>                                    
                                     
-                                        <img src="img/T2.jpg" alt="" />
+                                        <img src="./img/T2.jpg" alt="" />
                                         <h3>Bữa 20 tháng mừi, được tặng nhiều đồ á</h3>
                                     
                                 </div>
                                 <div>               
-                                        <img src="img/T3.jpg" alt="" />
+                                        <img src="./img/T3.jpg" alt="" />
                                         <h3>Bữa này hơm sinh nhựt chị Tươi.</h3>    
-                                        <img src="img/T4.jpg" alt="" />
+                                        <img src="./img/T4.jpg" alt="" />
 
                                         <h3>Thấy mọi ngừi bảo nà đi tập thể dục ^^</h3>                             
                                 </div>                            
@@ -203,7 +197,7 @@
  
                 <!-- Footer -->
                     <footer id="footer">
-                        <p>&copy; Ảnh Dương Dương chợp. Design: Motmummim ^^.</p>
+                        <p>&copy; Ảnh mọi ngừi chợp. Design: GHRP Team ^^.</p>
                     </footer>
  
             </div>
