--- a/Team's photo.html
+++ b/Team's photo.html
@@ -177,17 +177,17 @@
                         <!-- Thumbnails -->
                             <section class="thumbnails">
                                 <div>                                   
-                                        <img src="./img/T1.jpg" alt="" />
+                                        <img src="T1.jpg" alt="" />
                                         <h3>Hơm "gặm" xương Mười</h3>                                    
                                     
-                                        <img src="./img/T2.jpg" alt="" />
+                                        <img src="T2.jpg" alt="" />
                                         <h3>Bữa 20 tháng mừi, được tặng nhiều đồ á</h3>
                                     
                                 </div>
                                 <div>               
-                                        <img src="./img/T3.jpg" alt="" />
+                                        <img src="T3.jpg" alt="" />
                                         <h3>Bữa này hơm sinh nhựt chị Tươi.</h3>    
-                                        <img src="./img/T4.jpg" alt="" />
+                                        <img src="T4.jpg" alt="" />
 
                                         <h3>Thấy mọi ngừi bảo nà đi tập thể dục ^^</h3>                             
                                 </div>                            
