--- a/Member.html
+++ b/Member.html
@@ -69,7 +69,7 @@
     <h2>GHRP Member List</h2> 
     <ol>
     <script class="ten">
-        list = new Array ("Bùi Văn Điệu", "Hoàng Đức Thiện", "Vũ Văn Sự", "Nguyễn Thị Hồng Tươi",
+        list = new Array ("Bùi Văn Điệu", "Hoàng Đức Thiện", "Vũ Văn Sự", "Nguyễn Thị Hồng Tươi", "Bùi Hương Giang",
        "Lê Thùy Dương", "Hoàng Thị Ánh", "Trần Văn Thái", "Nguyễn Mạnh Hưng", "Dương Thị Huệ",
         "Đào Tiến Văn", "Mai Duy Sâm", "Nguyễn Văn Tuấn", "Lương Minh Ngọc", "Đinh Công Bình", 
         "Vũ Công Trường");
@@ -133,6 +133,18 @@
             </ul>
           </figcaption>
           </figure>
+
+          <figure>
+            <img src="c Giang.jpg">
+            <figcaption>
+                Bùi Hương Giang
+                <ul>
+                  <li>Ngày sinh:  </li>
+                  <li>Chức vụ:  </li>
+                  <li>Team: Payroll </li>
+              </ul>
+            </figcaption>
+            </figure>
           
          <figure>
            <img src="Duong.jpg">
