--- a/Duong's photo.html
+++ b/Duong's photo.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="fontello-d80c9d98/css/fontello.css">
     <style>
         body{
-        background-image: url(bg.jpg);
+        background-color: rgb(176, 151, 201);
         background-size: cover;
         font-family: 'Dancing Script', cursive;
         }
