--- a/Team's photo.html
+++ b/Team's photo.html
@@ -164,7 +164,7 @@
                 
                         <h1>Một số hình ảnh ăn + uống không quên tạo dáng của Team. Tình hình dịch bệnh căng thẳng, 
                             tiếc là cả Team vẫn chưa được hóng với nhau bữa nào ngoài đường cả.hị hị Mong ngày được 
-                        quẩy bên ngoài</h1>
+                        quẩy cùng nhao bên ngoài ^^</h1>
                         <p>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/XOJBLHZUeVM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </p>
@@ -178,7 +178,7 @@
                             <section class="thumbnails">
                                 <div>                                   
                                         <img src="T1.jpg" alt="" />
-                                        <h3>Hơm "gặm" xương Mười</h3>                                    
+                                        <h3>Hơm "gặm" sườn Mười</h3>                                    
                                     
                                         <img src="T2.jpg" alt="" />
                                         <h3>Bữa 20 tháng mừi, được tặng nhiều đồ á</h3>
