--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
     <article>
         <h2>Chuỵn đi làm công ty mới của Dưn! ^^</h2>
         <p>Chuyện nà bạn Dưn mới chuyển sang công ty mới, nhàm từ cuối tháng 5 năm 2021.
-        Sau vài tháng làm quen với công việc thì Dương thấy đầu óc Dưn vẫn dốt dốt thế, nên rằng thì là đang mò mò học mấy thứ mới mới cho tinh
-          thần phấn chấn hơn.
+        Sau vài tháng làm quen với công việc thì Dương thấy đầu óc Dưn vẫn dốt dốt thế, nên rằng thì là đang mò học mấy thứ mới mới cho tinh
+          thần phấn chấn với đỡ bị dốt hơn.hí
         </p> 
-        <p>Đây là trang Web bạn Dương vừa mò mò được một thời gian, ngồi ê mông ở nhà xem youtube, xong hì hì hụ nàm theo.hihe 
-        Thành quả cũng chưa có gì đặc sắc, cơ mà đang thì mò mẫm, và web này sẽ dùng để lưu mấy ảnh của Team GHRP + ảnh vi vu của Dương ở đâu đóa!^^</p> 
+        <p>Đây là cái mà bạn ấy tạo ra sau một thời gian mò mò, ngồi ê mông ở nhà xem youtube, xong hì hì hụ nàm theo.hihe 
+        Thành quả cũng chưa có gì đặc sắc, cơ mà đang thì mò mẫm, và ẻm này dự định sẽ dùng để lưu mấy ảnh của Team GHRP + ảnh vi vu của Dương ở đâu đóa!^^</p> 
         <p>Mong bạn Dương ăn uống đầy đủ rồi thì là học hành chăm chỉ nhé! Yêu thương~</p>
     
     </article>
