--- a/Member.html
+++ b/Member.html
@@ -58,10 +58,10 @@
 <div id="grid">
 <nav class="list">
     <ol>
-        <li><a href="index.html">Dưn Dưn Web!</a></li>
-        <li><a href="Member.html"> Member</a></li>
-        <li><a href="Team's photo.html"> Team's photo</a></li>
-        <li><a href="Duong's photo.html"> Duong's photo</a></li>
+        <li><a href="index.html">Giới thiệu</a></li>
+        <li><a href="Member.html">GHRP Team</a></li>
+        <li><a href="Team's photo.html">Ảnh Team</a></li>
+        <li><a href="Duong's photo.html" class="last-link">Đi chơi</a></li>
     </ol>
 </nav>
 <div id="Member">
