--- a/Duong's photo.html
+++ b/Duong's photo.html
@@ -179,6 +179,7 @@
     <div id="grid">
         <nav class="list">
             <ol id="navbar">
+                <li><a href="index.html">Giới thiệu</a></li>
                 <li><a href="Duong's photo.html">Ảnh Dương</a></li>
                 <li><a href="1.yeutham.html" class="last-link">Nhạc Việt</a></li>
             </ol>
