--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
     <div id="grid">
         <ul id="navbar">
             <li><a href="index.html">Giới thiệu</a></li>
-            <li><a href="Member.html">GHRP Team</a></li>
-            <li><a href="Team's photo.html">Ảnh Team</a></li>
-            <li><a href="Duong's photo.html" class="last-link">Đi chơi</a></li>
+            <li><a href="Member.html" title="List member">GHRP Team</a></li>
+            <li><a href="Team's photo.html" tile ="Ảnh Team" >Ảnh Team</a></li>
+            <li><a href="Duong's photo.html" target="_blank" class="last-link">Đi chơi</a></li>
         </ul>
         <div id="article">
             <article>
