--- a/3.yeuduockhong.html
+++ b/3.yeuduockhong.html
@@ -131,7 +131,7 @@
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/go3G7lvIrbk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </p>
 
-                <p class="text"> <i> Yêu được không (사랑해도 될까요?) <br> Ca sĩ/가수: Bùi Anh Tuấn, Hiền hồ </i>
+                <p class="text"> <i> Yêu được không (사랑해도 될까요?) <br> Ca sĩ/가수: Hương Ly_cover </i>
                     <span class="dots"> ........</span>
 
                     <span class="moreText"> <br><br>
