--- a/Member.html
+++ b/Member.html
@@ -235,9 +235,11 @@
             <figcaption>
                 Mai Duy Sâm 
                 <ul>
-                    <li>Ngày sinh: 12/3 </li>
+                    <li>Ngày sinh: 12/3 (Tuổi Tuất)</li>
                     <li>Chức vụ: Dev</li>
                     <li>Team: Nexprime </li>
+                    <li> Hiện đang FA, số đo 3 vòng 100-100-100 </li>
+                    <li> Tửu lượng: ngàn ly có say </li>
                 </ul>
             </figcaption>
             </figure>	
