--- a/Member.html
+++ b/Member.html
@@ -99,7 +99,7 @@
           </figure>
           
           <figure>
-          <img src="11.jpg">
+          <img src="AThien.jpg">
           <figcaption>
               Hoàng Đức Thiện
               <ul>
