--- a/Member.html
+++ b/Member.html
@@ -87,7 +87,7 @@
     <section id="main">
     <div id="columns">
     <figure>
-        <img src="11.jpg">
+        <img src="Adieu.jpg">
           <figcaption>
               Bùi Văn Điệu 
               <ul>
