--- a/Member.html
+++ b/Member.html
@@ -92,8 +92,8 @@
               Bùi Văn Điệu 
               <ul>
                   <li>Ngày sinh: 1/1 </li>
-                  <li>Chức vụ: TPM</li>
-                  <li>Team: GHRP</li>
+                  <li>Hiện đang giữ vai trò là TPM và thuộc Team GHRP</li>
+                  <li>Tính đến tháng 1/2022 thì đã làm ông bố của 2 bé, không biết năm tới có đón thêm thành viên nữa khum ^^</li>
               </ul>
           </figcaption>
           </figure>
@@ -104,8 +104,8 @@
               Hoàng Đức Thiện
               <ul>
                   <li>Ngày sinh: 20/6</li>
-                  <li>Chức vụ: TPM</li>
-                  <li>Team: GHRP</li>
+                  <li>TPM của GHRP và đang tuyển danh sách con dâu cho 1 cậu cu ở nhà,hí</li>
+                  <li> Ngoài khả năng tiếng Anh thì còn có khả năng chém gió cả tiếng Hàn nữa ý </li>
               </ul>
           </figcaption>
           </figure>
@@ -116,8 +116,8 @@
               Nguyễn Thị Hồng Tươi
               <ul>
                 <li>Ngày sinh: 29/10 </li>
-                <li>Chức vụ: TPM</li>
-                <li>Team: Nexprime</li>
+                <li>TPM của Nexprime Team, có khả năng chém gió + hát hò bằng tiếng Hàn</li>
+                <li>Hiện đang chăm sóc một công chúa nhỏ ở nhà ^^ </li>
             </ul>
             </figcaption>
           </figure>
@@ -128,8 +128,8 @@
               Vũ Văn Sự
               <ul>
                 <li>Ngày sinh: 30/12 </li>
-                <li>Chức vụ: TPM </li>
-                <li>Team: Nexprime </li>
+                <li>TPM của Team Nexprime</li>
+                <li>TPM vừa mới được lên chức bố tháng 1/2022 ^^ </li>
             </ul>
           </figcaption>
           </figure>
@@ -140,8 +140,8 @@
                 Bùi Hương Giang
                 <ul>
                   <li>Ngày sinh:  </li>
-                  <li>Chức vụ:  </li>
-                  <li>Team: Payroll </li>
+                  <li>TPM của Team Payroll</li>
+                  
               </ul>
             </figcaption>
             </figure>
@@ -152,8 +152,8 @@
               Lê Thùy Dương
               <ul>
                 <li>Ngày sinh: 6/12 </li>
-                <li>Chức vụ: BSE </li>
-                <li>Team: GHRP</li>
+                <li>BSE của GHRP </li>
+                <li>Tình trạng hôn nhân: đang chơi bời ^^ </li>
             </ul>
           </figcaption>
           </figure>
@@ -164,8 +164,8 @@
               Trần Văn Thái 
               <ul>
                 <li>Ngày sinh: 10/10 </li>
-                <li>Chức vụ: Dev </li>
-                <li>Team: GHRP</li>
+                <li>Dev của GHRP</li>
+                <li>Tình trạng hôn nhân: tính đáng t1/2022 là đang tìm "Gấu"</li>
             </ul>
           </figcaption>
           </figure>
@@ -176,8 +176,8 @@
               Đinh Công Bình
               <ul>
                 <li>Ngày sinh: 13/5 </li>
-                <li>Chức vụ: </li>
-                <li>Team: GHRP </li>
+                <li>Dev của GHRP Team </li>
+                <li></li>
             </ul>
           </figcaption>
           </figure>	
@@ -262,8 +262,8 @@
             Đào Tiến Văn 
             <ul>
                 <li>Ngày sinh: 27/2 </li>
-                <li>Chức vụ: Dev</li>
-                <li>Team: Nexprime </li>
+                <li>Dev của Nexprime</li>
+                <li>Hiện tại: đã có "Gấu" ^^ </li>
             </ul>
         </figcaption>
          </figure> 
@@ -274,8 +274,8 @@
                 Dương Thị Huệ
                 <ul>
                     <li>Ngày sinh:14/8 </li>
-                    <li>Chức vụ: Dev</li>
-                    <li>Team: Nexprime</li>
+                    <li>Dev của Nexprime</li>
+                    <li>Hiện đang nuôi một cục bông hay kêu meo meo ở nhà</li>
                 </ul>
             </figcaption>
         </figure> 
